syntax = "proto3";

option csharp_namespace = "drDotnet.Services.User.API";

package user;

service UserManager {
    rpc CreateUser (CreateUserMessage) returns (CreatedUser);
    rpc GetUsers (UserIds) returns (stream User);
    rpc EmailExists (Email) returns (ExistsResult);
    rpc PhoneExists (Phone) returns (ExistsResult);
    rpc EmailPhoneExists (PhoneEmail) returns (ExistsResult);
}

message ExistsResult {
    bool exists = 1;
    int64 id = 2;
}

message PhoneEmail {
    string phone = 1;
    string email = 2;
}

message Phone {
    string phone = 1;
}

message Email {
    string email = 1;
}

message CreateUserMessage {
    string email = 1;
    string first_name = 2;
    string last_name = 3;
    string sub = 4;
}

message CreatedUser {
    int64 id = 1;
    string email = 2;
    string first_name = 3;
    string last_name = 4;
    string sub = 5;
}

message UserIds {
    repeated int64 ids = 1;
}

message User {
    int64 id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string phone = 5;
    string sub = 6;
}